[package]
name = "ambient-id"
version = "0.1.0"
edition = "2024"
description = "Detects ambient OIDC credentials in a variety of environments"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "gzip",
    "deflate",
    "rustls-tls",
    "rustls-tls-native-roots",
    "http2",
] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[features]
default = []

# This is a test-only feature to allow CI to run tests that require
# a functional GitHub Actions OIDC environment (i.e. one provisioned
# with `permissions: id-token: write`).
test-github-1p = []

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
