[package]
name = "ambient-id"
version = "0.0.7"
authors = ["William Woodruff <william@astral.sh>"]
edition = "2024"
description = "Detects ambient OIDC credentials in a variety of environments"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/astral-sh/ambient-id"
repository = "https://github.com/astral-sh/ambient-id"
categories = ["security", "authentication", "asynchronous"]
keywords = ["oidc", "trusted-publishing", "sigstore", "identity"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "gzip",
  "deflate",
  "http2",
] }
reqwest-middleware = { version = "0.4.2", optional = true }
# Workaround for https://github.com/rust-lang/cargo/issues/9227#issuecomment-3532957795
astral-reqwest-middleware = { version = "0.4.2", optional = true }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[features]
default = ["dep:reqwest-middleware", "rustls"]
rustls = ["reqwest/rustls-tls", "reqwest/rustls-tls-native-roots"]
native-tls = ["reqwest/native-tls"]

# This is a test-only feature to allow CI to run tests that require
# a functional GitHub Actions OIDC environment (i.e. one provisioned
# with `permissions: id-token: write`).
test-github-1p = []

# This is a test-only feature to allow CI to run tests that require
# a functional Buildkite OIDC environment.
test-buildkite-1p = []

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
